--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,7 +15,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Login DockerHub
         run: |
-          echo ${{ secrets.dddddd }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: init
         run: |
           docker run --rm --privileged multiarch/qemu-user-static --reset -p yes; \
