--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: nginx-and...
+name: jvm-and...
 on:
   push:
     branches:
@@ -15,7 +15,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Login DockerHub
         run: |
-          echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          echo ${{ secrets.DOCKER_ORG_TOKEN0 }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: init
         run: |
           docker run --rm --privileged multiarch/qemu-user-static --reset -p yes; \
@@ -27,4 +27,4 @@ jobs:
             --push \
             --no-cache \
             --platform linux/arm64,linux/amd64 \
-            -t ghcr.io/${{ github.repository }}:latest .
+            -t ${{ github.repository }}:latest .
